--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "jsonwebtoken": "^8.2.1",
     "tedious": "^2.6.1",
     "tedious-connection-pool": "^1.0.5"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.5"
   }
 }
