--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.2.1",
     "tedious": "^2.6.1",
-    "tedious-connection-pool": "^1.0.5"
+    "tedious-connection-pool": "^1.0.5",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
